# FaceMixer

./: 2DFaceWithRec.smf  2DFaceWithVBoundary.smf  2D_face_Liu.smf  2D_fixedpoints_index_bck.output  AC-fixpoint.output  Avatar-Captain.html  README.md  Tiger_fixedpoints.output  face.obj.mtl  face_rotated.smf  fixedpoints_index.output  pointorder.psd  result1.smf
Implementations/: README
Implementations/Datas/: 2DFaceWithRec.smf  match_result.txt
Implementations/matching/: CMakeLists.txt  Makefile  vshader_mac.glsl
Pre/: Presentation.pptx  Tiger_fixedpoints.output  ~$final_pre.pptx
Presentation/resourses/: QQ20160414-9.psd
Tutte_Embedding/: Cext.output  MacTypes.h  README  Xext.output  Yext.output  tutte_embedding.m  unknown
Tutte_Embedding/4.4.4_2/: INSTALL_RECEIPT.json  sample.c
Tutte_Embedding/464A1/: embedding.h  jama_lu.h  mesh_processing.mm  parameterization.h  wing_edge_ds.h
Tutte_Embedding/tutte_embedding.xcodeproj/: project.pbxproj
faceDrawer/: fshader.glsl  main.cpp  vshader.glsl
faceDrawer/include/: Angel.h  CheckError.h  funcNeed.h  imageloader.cpp  imageloader.h
faceDrawer/smf/: DIY.smf  face2D.smf  face3D.smf
faceDrawer/textureMapping/: main.cpp
faceDrawer/textureMapping.xcodeproj/: project.pbxproj
matching/: CMakeLists.txt  fshader_mac.glsl  fshader_unix.glsl  vshader_unix.glsl
matching/cmake/: FindGLUI.cmake
matching/include/: init_shader.h  lib_consts.h  lib_gl.h  match.h  smf_parser.h  winged_edge.h
matching/mesh/: index.txt  match_result.txt  test.smf
matching/src/: init_shader.cc  main.cc  match.cc  smf_parser.cc
(+126 files in other folders)
